Added pagination for list of client and modified pagination for Products Added corresponding doc in swagger.json
