# public/swagger/swagger.json
@@ -11,13 +11,24 @@
         }
     ],
     "paths": {
-        "/api/client/users": {
+        "/api/client/users/{page}": {
             "get": {
                 "tags": [
                     "Utilisateurs"
                 ],
                 "summary": "Récupération de la liste des utilisateurs liés au Client connecté",
                 "operationId": "App\\Controller\\ClientController::clientUsers",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "path",
+                        "description": "Numéro de la page de la liste des utilisateurs, on affiche 5 utilisateurs à partir de cet indicateur. (La première page est 0)",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Liste des utilisateurs lié au client",
@@ -44,7 +55,9 @@
                         "scalar": "bearer"
                     }
                 ]
-            },
+            }
+        },
+        "/api/client/users": {
             "post": {
                 "tags": [
                     "Utilisateurs"
@@ -164,7 +177,7 @@
                 }
             }
         },
-        "/api/products/{offset}": {
+        "/api/products/{page}": {
             "get": {
                 "tags": [
                     "Produits"
@@ -173,9 +186,9 @@
                 "operationId": "App\\Controller\\ProductController::listProduct",
                 "parameters": [
                     {
-                        "name": "offset",
+                        "name": "page",
                         "in": "path",
-                        "description": "Nombre de produit a ignorer dans la liste, on affiche 5 produits à partir de cet indicateur.",
+                        "description": "Numéro de la page dans la liste des produits, on affiche 5 produits à partir de cet indicateur. (La première page est 0)",
                         "required": true,
                         "schema": {
                             "type": "integer"
